build: remove Dockerfile, switch all build paths to buildpacks
The runtime image now comes solely from `mvn spring-boot:build-image` (Cloud
Native Buildpacks). Removes joxette-service/Dockerfile and .dockerignore, points
docker-compose at the built image by name (JOXETTE_IMAGE override), and updates
the README, Helm chart README, operator-design.md, and progress.md to the
buildpacks workflow.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>