@@ -253,7 +253,7 @@
 #### Deployment / Kubernetes
 - [x] `docs/clustering-deployment.md` — concurrency, roles, coordination, K8s + non-K8s topologies, catalog single-writer guardrail
 - [x] `docs/operator-design.md` — JOSDK operator design: `JoxetteCluster` + `RecordedTopic` + `EntityType` CRDs, tier→workload map, catalog/scaling enforcement, two clustering tracks
-- [x] **Phase 0 — container image**: multi-stage `joxette-service/Dockerfile` (temurin-25 builder → 25-jre-alpine runtime, `--enable-preview`, non-root) + docker-compose service (commit 31bcbe3)
+- [x] **Phase 0 — container image**: built via Cloud Native Buildpacks — `mvn -pl joxette-service spring-boot:build-image` (BP_JVM_VERSION=25, preview flags baked into JAVA_TOOL_OPTIONS with --add-opens in `=` form); Dockerfile removed; verified booting on Java 25.0.3 (commit 1cf8aa1)
 - [x] **Phase 0 — Track B Pekko Management**: `joxette.clustering.mode = catalog (default) | pekko-management`; mgmt+bootstrap+k8s-discovery+k8s-lease deps at 2.0.0-M1 (core aligned M3→M1); HOCON overlay (kubernetes-api discovery + lease-majority SBR), mgmt port 7626, no self-join in mgmt mode; `PekkoConfigClusteringTest` (commit 9a9bfa7). 844 tests green
 - [x] **Helm chart** — `deploy/helm/joxette/`: embedded→StatefulSet / quack+pg→per-tier Deployments; clustering.mode drives Services+RBAC (headless Svc + pod RBAC + POD_IP for pekko-management); render-time single-writer guardrail; values-kind + values-cluster examples; lint+template verified (commit 8370ecf)
 - [ ] **Build the operator** (NEXT) — JOSDK module, Phases 1–3 in `operator-design.md`: JoxetteCluster CRD + reconciler + dependent resources + catalog guardrail webhook, then RecordedTopic/EntityType API reconcilers
